--- a/index.html
+++ b/index.html
@@ -145,8 +145,55 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 		</div>
 	</div>
 </div>
+<div class = "container text-center">
+	<h2 style="color: #0000b3; font-weight: bold;">Featured News</h2>
+	
+	<div class="container text-center" >
+	<div class="row">
+		<div class="col-sm-4" >
+			
+			
+		</div>
+		<div class="col-sm-4">
+			
+		</div>
+		<div class="col-sm-4">
+			
+			
+		</div>
+	
+		<button type ="button" class="btn btn-default" style ="margin:38px 0px; width:220px;"> VIEW MORE </button>
+
+	</div>
+</div>
 </div>
 
-<nav class ="navbar navbar-inverse">
+</div>
+<!--<div  style = "background-color: gold; ">
+			<h1 style="color: white;"> Connect with us: </h1>
+		
+		
+			
+		</div>
+	
+</div> -->
+
+
+
+
+
+<footer style = "background-color: blue; color: white;">
+	<div class="col-sm-4">Powered by: Team RDO</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="research.html">Research</a></li>
+				<li><a href="authors.html">Authors</a></li>
+				<li><a href="#">Editorial Policies</a></li>
+				<li><a href="#">About</a></li>
+			</ul>
+		</div>
+
+</footer>
 </body>
 </html>
